Start html and css template styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>My Library</header>
+    <section>
+        <div class="card">
+            <h1>Tobi Lolness</h1>
+            <div class="book-info">
+                <div class="text">
+                    <p>Thimothée de Fonbelle</p>
+                    <p>350 pages</p>
+                </div>
+                <p class="checkmark">Read</p>
+            </div>
+        </div>
+        <div class="card">
+            <h1>Dune</h1>
+            <div class="book-info">
+                <div class="text">
+                    <p>Frank herbert</p>
+                    <p>860 pages</p>
+                </div>
+                <p class="checkmark">Read</p>
+            </div>
+        </div>
+        <div class="card">
+            <h1>Les frères Karamasov</h1>
+            <div class="book-info">
+                <div class="text">
+                    <p>Victor Dosteoivski</p>
+                    <p>1300 pages</p>
+                </div>
+                <p class="checkmark">Not Read</p>
+            </div>
+        </div>
+    </section>
+    <aside>
+        <button>Add Book +</button>
+    </aside>
 </body>
 </html>
