Add svgs and style more

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,42 +8,84 @@
     <script src="script.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
     <header>My Library</header>
     <section>
         <div class="card">
-            <h1>Tobi Lolness</h1>
+            <div class="card-header">
+                <img src="./images/book-open-page-variant-outline.svg" alt="Open book">
+                <h1>Tobi Lolness</h1>
+                <img src="./images/trash-can-outline.svg" alt="Delete">
+            </div>
             <div class="book-info">
-                <div class="text">
-                    <p>Thimothée de Fonbelle</p>
-                    <p>350 pages</p>
+                <div class="line">
+                    <p><img src="./images/account-edit.svg" alt="author">Author</p>
+                    <p>Thimothé de Fombelle</p>
                 </div>
-                <p class="checkmark">Read</p>
+                <hr>
+                <div class="line">
+                    <p><img src="./images/numeric-1-box-multiple-outline.svg" alt="pages">Pages</p>
+                    <p>350</p>
+                </div>
+                <hr>
+                <div class="line">
+                    <p class="status"><img src="./images/list-status.svg" alt="Status">Status (Read / To-Read)</p>
+                    <img src="./images/checkbox-marked-circle-outline.svg" alt="">
+                </div>
             </div>
         </div>
         <div class="card">
-            <h1>Dune</h1>
+            <div class="card-header">
+                <img src="./images/book-open-page-variant-outline.svg" alt="Open book">
+                <h1>Dune</h1>
+                <img src="./images/trash-can-outline.svg" alt="Delete">
+            </div>
             <div class="book-info">
-                <div class="text">
-                    <p>Frank herbert</p>
-                    <p>860 pages</p>
+                <div class="line">
+                    <p><img src="./images/account-edit.svg" alt="author">Author</p>
+                    <p>Frank Herbert</p>
                 </div>
-                <p class="checkmark">Read</p>
+                <hr>
+                <div class="line">
+                    <p><img src="./images/numeric-1-box-multiple-outline.svg" alt="pages">Pages</p>
+                    <p>850</p>
+                </div>
+                <hr>
+                <div class="line">
+                    <p class="status"><img src="./images/list-status.svg" alt="Status">Status (Read / To-Read)</p>
+                    <img src="./images/checkbox-marked-circle-outline.svg" alt="">
+                </div>
             </div>
         </div>
+        </div>
         <div class="card">
-            <h1>Les frères Karamasov</h1>
+            <div class="card-header">
+                <img src="./images/book-open-page-variant-outline.svg" alt="Open book">
+                <h1>Les Frères Karamasov</h1>
+                <img src="./images/trash-can-outline.svg" alt="Delete">
+            </div>
             <div class="book-info">
-                <div class="text">
-                    <p>Victor Dosteoivski</p>
-                    <p>1300 pages</p>
+                <div class="line">
+                    <p><img src="./images/account-edit.svg" alt="author">Author</p>
+                    <p>Piotr Dosteiovski</p>
                 </div>
-                <p class="checkmark">Not Read</p>
+                <hr>
+                <div class="line">
+                    <p><img src="./images/numeric-1-box-multiple-outline.svg" alt="pages">Pages</p>
+                    <p>1300</p>
+                </div>
+                <hr>
+                <div class="line">
+                    <p class="status"><img src="./images/list-status.svg" alt="Status">Status (Read / To-Read)</p>
+                    <img src="./images/radiobox-blank.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
     <aside>
-        <button>Add Book +</button>
+        <button>Add Book <img src="./images/book-plus.svg" alt="Book plus"></button>
     </aside>
 </body>
+
 </html>
