Start dom manipulation with js
Add lopo funcitno to go through array and display the books.
Start by doing one book display, add header author and pages lines.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="book-info">
                 <div class="line">
-                    <p><img src="./images/account-edit.svg" alt="author">Author</p>
+                    <p><img src="./images/account-edit.svg" alt="author"><span>Author</span></p>
                     <p>Thimothé de Fombelle</p>
                 </div>
                 <hr>
