Add functionnality to the addbook button

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <form>
             <div class="form-container">
                 <label for="book-name">Book Name<input type="text" id="book-name"
-                        placeholder="ex : Echos de la rumeur du monde"></label>
+                        placeholder="ex : Echos de la rumeur du monde" required></label>
                 <label for="book-author">Book Author<input type="text" id="book-author"
                         placeholder="ex : Frannçois Xavier Roussel"></label>
-                <label for="book-pages">Number of Pages<input type="number" id="book-pages"
-                        placeholder="ex : 420"></label>
+                <label for="book-pages" >Number of Pages<input type="number" id="book-pages"
+                        placeholder="ex : 420" required></label>
                 <label for="book-status" id="check-status">Have you read it yet ?<input type="checkbox"
                         id="status"></label>
             </div>
